feat:criando tabelas do sorteio

--- a/pages/sorteio.html
+++ b/pages/sorteio.html
@@ -20,12 +20,11 @@
 </head>
 <body>
   <div id="tabelaDiv">
-    
- 
-  <script src="./components/createTable.js"></script>
-  <script src="./components/title.js"></script>  
-  <script src="sorteio-script.js"></script>
-  <script src="./components/buttonToHome.js"></script>
+    <h1>Sorteio</h1>     
+    <script src="../components/createTable.js"></script>
+    <script src="../components/randomNumbers.js"></script>    
+    <script src="../components/buttonToHome.js"></script>
+    <script src="sorteio-script.js"></script>
 </div>
 </body>
 </html>
