feat:estilizando tabelas

--- a/pages/sorteio.html
+++ b/pages/sorteio.html
@@ -4,7 +4,11 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  
+  <link rel="stylesheet" href="styles/reset.css">
+  <link rel="stylesheet" href="../styles/tables.css">
+  <link rel="stylesheet" href="../styles/homeButton.css">  
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@900&display=swap" rel="stylesheet"> 
   <title>
     Sorteio
   </title>
@@ -19,12 +23,19 @@
     </style>
 </head>
 <body>
-  <div id="tabelaDiv">
-    <h1>Sorteio</h1>     
-    <script src="../components/createTable.js"></script>
-    <script src="../components/randomNumbers.js"></script>    
+  <div id="root">
+    <h1>SORTEIO</h1>  
+    <div id="tableDiv">   
+      <script src="../components/createTable.js"></script>
+      <script src="../components/randomNumbers.js"></script>    
+      <script src="sorteio-script.js"></script>
+    </div>
+    
     <script src="../components/buttonToHome.js"></script>
-    <script src="sorteio-script.js"></script>
-</div>
+    <div id="buttonDiv">
+    </div>  
+
+
+  </div>
 </body>
 </html>
