--- a/pages/home.html
+++ b/pages/home.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles/reset.css">
-  <link rel="stylesheet" href="styles/styles.css">
+  <link rel="stylesheet" href="../styles/reset.css">
+  <link rel="stylesheet" href="../styles/styles.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@900&display=swap" rel="stylesheet"> 
   <title>Explicae</title>
@@ -16,18 +16,18 @@
   <div id="root">
     <h1>DESAFIO EXPLICAE</h1>
     <div id="central-icons">
-      <a href="pages/sorteio.html" id="button" >
+      <a href="sorteio.html" id="button" >
         <div id="icons">      
-            <img src="./assets/megasena.png" alt="form" width="100em">
+            <img src="../assets/megasena.png" alt="form" width="100em">
             <span id="icon-title">SORTEIO</span>      
         </div>
       </a>
       <div id="icons">
         <p id="icon-title">FORMULÁRIO</p>
-        <img src="./assets/form.png" alt="form" width="100em">
+        <img src="../assets/form.png" alt="form" width="100em">
       </div>
       <div id="icons">
-        <img src="./assets/people.png" alt="form" width="100em">
+        <img src="../assets/people.png" alt="form" width="100em">
         <p id="icon-title">PESSOAS</p>
       </div> 
     </div>
