feat:criando formulario para o envio de arquivos txt

--- a/pages/home.html
+++ b/pages/home.html
@@ -16,16 +16,18 @@
   <div id="root">
     <h1>DESAFIO EXPLICAE</h1>
     <div id="central-icons">
-      <a href="sorteio.html" id="button" >
+      <a href="./raffle.html" id="button" >
         <div id="icons">      
             <img src="../assets/megasena.png" alt="form" width="100em">
             <span id="icon-title">SORTEIO</span>      
         </div>
       </a>
-      <div id="icons">
-        <p id="icon-title">FORMULÁRIO</p>
-        <img src="../assets/form.png" alt="form" width="100em">
-      </div>
+      <a href="./form.html" id="button" >
+        <div id="icons">
+          <p id="icon-title">FORMULÁRIO</p>
+          <img src="../assets/form.png" alt="form" width="100em">
+        </div>
+      </a>  
       <div id="icons">
         <img src="../assets/people.png" alt="form" width="100em">
         <p id="icon-title">PESSOAS</p>
