--- a/pages/raffle.html
+++ b/pages/raffle.html
@@ -28,14 +28,10 @@
     <div id="tableDiv">   
       <script src="../components/createTable.js"></script>
       <script src="../components/randomNumbers.js"></script>    
-      <script src="sorteio-script.js"></script>
+      <script src="./raffle/index.js"></script>
     </div>
     
-    <script src="../components/buttonToHome.js"></script>
-    <div id="buttonDiv">
-    </div>  
-
-
+      <script src="../../components/buttonToHome.js"></script>
   </div>
 </body>
 </html>
