--- a/pages/form.html
+++ b/pages/form.html
@@ -5,7 +5,6 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="../styles/reset.css">
-  <link rel="stylesheet" href="../styles/tables.css">
   <link rel="stylesheet" href="../styles/form.css">
   <link rel="stylesheet" href="../styles/homeButton.css">  
   <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -16,13 +15,17 @@
   <div id="root">
     <h1>FORMULÁRIO</h1>  
     <form id="form">
-      <label for="inputArchive">Coloque aqui seu arquivo de texto:</label>
-      <input name="inputArchive" id="inputArchive" type="file">  
-      <button id="sendForm">Enviar arquivo</button>
+      <div>
+        <label for="inputArchive">Coloque aqui seu arquivo de texto:</label>
+        <input name="inputArchive" id="inputArchive" type="file">
+      </div>
+      <div id="buttonDiv">
+        <button id="sendForm">Enviar arquivo</button>
+      </div>  
     </form>
 
     <div id="showArchive">
-      <textarea id="archive" name="text" readonly rows="30" cols="80" ></textarea>
+      <textarea id="archive" name="text" readonly rows="30" cols="100" ></textarea>
     </div>
     <script src="./form/readText.js"></script>
     <script src="./form/archive.js"></script>
