--- a/pages/home.html
+++ b/pages/home.html
@@ -28,10 +28,12 @@
           <img src="../assets/form.png" alt="form" width="100em">
         </div>
       </a>  
-      <div id="icons">
-        <img src="../assets/people.png" alt="form" width="100em">
-        <p id="icon-title">PESSOAS</p>
-      </div> 
+      <a href="./people.html" id="button" >
+        <div id="icons">
+          <img src="../assets/people.png" alt="form" width="100em">
+          <p id="icon-title">PESSOAS</p>
+        </div> 
+      </a>
     </div>
   </div>
   <script src="script.js"></script>
