feat:adicionando readme

--- a/pages/people.html
+++ b/pages/people.html
@@ -33,7 +33,7 @@
           <td id="gender"></td>
           <td id="email"></td>
           <td id="city"></td>
-          <td id="nat"></td>
+          <td id="nat"><img id="flag"></td>
         </tbody>
       </table>
     </div>
