fix:corrigindo src do botão voltar

--- a/pages/form.html
+++ b/pages/form.html
@@ -29,7 +29,7 @@
     </div>
     <script src="./form/readText.js"></script>
     <script src="./form/archive.js"></script>
-    <script src="../../components/buttonToHome.js"></script>
+    <script src="../components/buttonToHome.js"></script>
     
   </div>
   
