--- a/pages/people.html
+++ b/pages/people.html
@@ -37,7 +37,7 @@
         </tbody>
       </table>
     </div>
-    <script src="../../components/buttonToHome.js"></script>
+    <script src="../components/buttonToHome.js"></script>
     <script src="./people/index.js"></script>
   </div>
   
