--- a/pages/raffle.html
+++ b/pages/raffle.html
@@ -30,8 +30,8 @@
       <script src="../components/randomNumbers.js"></script>    
       <script src="./raffle/index.js"></script>
     </div>
-    
-      <script src="../../components/buttonToHome.js"></script>
+
+     <script src="../components/buttonToHome.js"></script>
   </div>
 </body>
 </html>
