feat:adicionando media queries e dando responsividade ao site em dispositivos celulares

--- a/pages/people.html
+++ b/pages/people.html
@@ -16,26 +16,28 @@
   <div id="root">
     <h1>PESSOAS</h1>  
     <div id="tablePeople">
-      <table>
-        <thead>
-          <tr>
-            <th>Foto</th>
-            <th>Nome</th>
-            <th>Genêro</th>
-            <th>Email</th>
-            <th>Cidade</th>
-            <th>Nacionalidade</th>
-          </tr>
-        </thead>
-        <tbody>
-          <td id="photoTd"><img id="photo"></td>
-          <td id="name"></td>
-          <td id="gender"></td>
-          <td id="email"></td>
-          <td id="city"></td>
-          <td id="nat"><img id="flag"></td>
-        </tbody>
+      <section id="tableSection">
+        <table>
+          <thead>
+            <tr>
+              <th>Foto</th>
+              <th>Nome</th>
+              <th>Genêro</th>
+              <th>Email</th>
+              <th>Cidade</th>
+              <th>Nacionalidade</th>
+            </tr>
+          </thead>
+          <tbody>
+            <td id="photoTd"><img id="photo"></td>
+            <td id="name"></td>
+            <td id="gender"></td>
+            <td id="email"></td>
+            <td id="city"></td>
+            <td id="nat"><img id="flag"></td>
+          </tbody>
       </table>
+    </section>
     </div>
     <script src="../components/buttonToHome.js"></script>
     <script src="./people/index.js"></script>
