--- a/pages/form.html
+++ b/pages/form.html
@@ -16,7 +16,7 @@
     <h1>FORMULÁRIO</h1>  
     <form id="form">
       <div>
-        <label for="inputArchive">Coloque aqui seu arquivo de texto:</label>
+        <label for="inputArchive" id="labelFile">Coloque aqui seu arquivo de texto:</label>
         <input name="inputArchive" id="inputArchive" type="file">
       </div>
       <div id="buttonDiv">
