--- a/pages/raffle.html
+++ b/pages/raffle.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles/reset.css">
+  <link rel="stylesheet" href="../styles/reset.css">
   <link rel="stylesheet" href="../styles/tables.css">
   <link rel="stylesheet" href="../styles/homeButton.css">  
   <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -12,15 +12,6 @@
   <title>
     Sorteio
   </title>
-  <style>
-    html, body { font-family: arial, sans-serif; }
-    table { border-collapse: collapse; }
-    table tr td {
-      border: 1px solid #000;
-      padding: 10px;
-    }
-    table tr:nth-child(odd) { background: #f4f4f4; }
-    </style>
 </head>
 <body>
   <div id="root">
